--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,18 @@
 	color: #009688;
 }
 
+#typedWrong{
+	color: #F44336;
+}
+
+.correct{
+	color: #009688;
+}
+
+.wrong{
+	color: #F44336;
+}
+
 #space{
 	margin-top: 1em
 }
@@ -91,7 +103,7 @@
 	text-align:center;
 	font-family: 'Raleway', sans-serif;
 	font-weight: bold;
-	border: 0.2em solid black;
+	border: 0.15em solid black;
 	border-radius: 1em;
 	width: 4em;
 	margin:auto;
