--- a/help/css/index.css
+++ b/help/css/index.css
@@ -16,6 +16,7 @@
 }
 
 #shortcuts {
+  font-family: 'Montserrat', sans-serif;
   text-align:center;
 }
 
@@ -36,4 +37,19 @@
 #shift {
   font-family: 'Raleway', sans-serif;
   font-size: 1.5em;
+}
+
+#back {
+  text-align:center;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  border: 0.15em solid black;
+  border-radius: 1em;
+  width: 4em;
+  margin:auto;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
